--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,12 @@ fpga_version_info.c
 
 # docs
 !doc/*.json
+
+# Swift suggested
+.DS_Store
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
